RbA Build/src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Time_On_Hold__c</fullName>
        <label>Time - On Hold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Order_Released__c</fullName>
        <label>Time - Order Released</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Pending_Cancellation__c</fullName>
        <label>Time - Pending Cancellation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Ready_to_Order__c</fullName>
        <label>Time - Ready to Order</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Tech_Measure_Needed__c</fullName>
        <label>Time - Tech Measure Needed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Tech_Measure_Scheduled__c</fullName>
        <label>Time - Tech Measure Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_from_Sold__c</fullName>
        <description>Field is used for reporting only, not to be added to page layouts</description>
        <formula>Installation_Date__c - EffectiveDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is used for reporting only, not to be added to page layouts</inlineHelpText>
        <label>Time from Sold (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Jobsite_Hours__c</fullName>
        <label>Total Jobsite Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Materials_Applied__c</fullName>
        <formula>Retail_Total__c *  Store_Location__r.Active_Store_Configuration__r.Material_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Materials Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Procedure_Time__c</fullName>
        <inlineHelpText>Roll up of all Order Product Total Procedure Time (from Warranty)</inlineHelpText>
        <label>Total Procedure Time</label>
        <summarizedField>OrderItem.Total_Procedure_Time__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Product_Tax__c</fullName>
        <description>The total product tax for this order as migrated from Pivotal.</description>
        <inlineHelpText>The total product tax for this order as migrated from Pivotal.</inlineHelpText>
        <label>Total Product Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_image__c</fullName>
        <formula>CASE( RecordTypeId , 
&quot;0123B000000Ci1R&quot;, IMAGE (&quot;resource/ServiceOrder&quot;,&quot;Service Order&quot;), 
&quot;Install&quot;, IMAGE(&quot;resource/InstallText&quot;,&quot;Install&quot;), 
&quot;Service&quot;, IMAGE(&quot;resource/ServiceText&quot;,&quot;Service&quot;),
&quot;HOA&quot;, IMAGE(&quot;resource/HOAText&quot;,&quot;HOA&quot;),
&quot;Historical&quot;, IMAGE(&quot;resource/HistoricalText&quot;,&quot;Historical&quot;),
&quot;Building Permit&quot;, IMAGE(&quot;resource/BuildingPermitText&quot;,&quot;Building Permit&quot;),
&quot;LSWP&quot;, IMAGE(&quot;resource/LSWP&quot;,&quot;LSWP&quot;),
&quot;Paint/Stain&quot;, IMAGE(&quot;resource/PaintStainText&quot;,&quot;Paint/Stain&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Cost_Rollup__c</fullName>
        <description>Rollup field for Universal Cost</description>
        <label>Universal Cost Rollup</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Universal_Rollup__c</fullName>
        <description>Rollup for number of Universal Units</description>
        <label>Universal</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Universal_Sales_Rollup__c</fullName>
        <description>Rollup field for Universal Sales</description>
        <label>Universal Sales Rollup</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validate_Service_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for validation purposes ensuring Orders have BilltoContact and Service Type filled out, but need it to trigger only after creation of the Order.</description>
        <label>Validate Service Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Date_Accepted__c</fullName>
        <inlineHelpText>Date Warranty was accepted</inlineHelpText>
        <label>Warranty Date Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Date_Submitted__c</fullName>
        <inlineHelpText>Date Warrant was submitted.</inlineHelpText>
        <label>Warranty Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Reimbursement_Amount__c</fullName>
        <inlineHelpText>Total Reimbursement Amount</inlineHelpText>
        <label>Warranty Reimbursement Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Windows_Rollup__c</fullName>
        <description>Rollup of all products on the order where Product Family = Window</description>
        <inlineHelpText>Rollup of all products on the order where Product Family = Window</inlineHelpText>
        <label>Windows</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hasPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Visits__c</fullName>
        <description>Manual entry for Service Managers</description>
        <inlineHelpText>Please enter # of Visits for this Service Request</inlineHelpText>
        <label># of Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rSuite_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>an identifier used by rSuite to help them manage jobs in the mobile apps - meets RFC 4122 version 4</description>
        <externalId>true</externalId>
        <inlineHelpText>an identifier used by rSuite to help them manage jobs in the mobile apps</inlineHelpText>
        <label>rSuite Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Activated_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>3. Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>Activated_Orders_Install_Needed</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Installation_Date__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Installation_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>3. Activated Orders - Install Needed</label>
    </listViews>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>All_Orders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>4. All Orders</label>
    </listViews>
    <listViews>
        <fullName>Change_Orders</fullName>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>RecordTypeName__c</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Amount_Due__c</columns>
        <columns>Order_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDER.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Order.Change_Order</value>
        </filters>
        <label>Change Orders</label>
    </listViews>
    <listViews>
        <fullName>Collections</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>Amount_Due__c</columns>
        <columns>Installation_Date_Complete__c</columns>
        <columns>AR_Age__c</columns>
        <columns>Service_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Revenue_Recognized_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Amount_Due__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Collections</label>
    </listViews>
    <listViews>
        <fullName>Demo_Orders_Install_Complete</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Order_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Install Complete</value>
        </filters>
        <filters>
            <field>Store_Location__c</field>
            <operation>equals</operation>
            <value>Demo Store - BW</value>
        </filters>
        <label>Demo Orders - Install Complete</label>
    </listViews>
    <listViews>
        <fullName>Demo_Orders_Install_Needed</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Order_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Install Needed</value>
        </filters>
        <filters>
            <field>Store_Location__c</field>
            <operation>equals</operation>
            <value>Demo Store - BW</value>
        </filters>
        <label>Demo Orders - Install Needed</label>
    </listViews>
    <listViews>
        <fullName>DraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>2. Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>DraftOrdersNeedTechMeasure</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Tech_Measure_Date__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <filters>
            <field>Tech_Measure_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>2. Draft Orders - Need Tech Measure</label>
    </listViews>
    <listViews>
        <fullName>Orders_Draft</fullName>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>Order_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Orders - Draft</label>
    </listViews>
    <listViews>
        <fullName>Orders_Install_Complete</fullName>
        <columns>Revenue_Recognized_Date__c</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Amount_Due__c</columns>
        <columns>AR_Reason__c</columns>
        <columns>AR_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS</field>
            <operation>equals</operation>
            <value>Install Complete</value>
        </filters>
        <label>Orders - Install Complete</label>
    </listViews>
    <listViews>
        <fullName>Orders_Install_Estimated_Date_Conflict</fullName>
        <columns>Install_Ship_Date_Conflict__c</columns>
        <columns>Estimated_Ship_Date__c</columns>
        <columns>Installation_Date__c</columns>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDER.BILL_TO_CONTACT</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Install_Ship_Date_Conflict__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Orders - Install/Estimated Date Conflict</label>
    </listViews>
    <recordTypes>
        <fullName>ARO_Record_Type</fullName>
        <active>true</active>
        <description>ARO Orders</description>
        <label>ARO Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CORO_Record_Type</fullName>
        <active>true</active>
        <description>CORO Orders</description>
        <label>CORO Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>CORO_Service</fullName>
        <active>true</active>
        <description>CORO Service Records</description>
        <label>CORO Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Change_Order</fullName>
        <active>true</active>
        <label>Change Order</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BusinessAdjustmentCheck</fullName>
        <active>true</active>
        <description>Throw an error if the business adjustments value changed and the amount due is less than zero.</description>
        <errorConditionFormula>AND(ISCHANGED(Business_Adjustments__c),  Amount_Due__c &lt; 0)</errorConditionFormula>
        <errorMessage>You must enter a refund prior to this Business Adjustment. The Balance Due on the Order cannot be less than Zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancel_Service_on_Created_Date_Only</fullName>
        <active>true</active>
        <description>Service Requests may only be cancelled on the created date</description>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;CORO_Service&apos;), 
NOT(ISPICKVAL( PRIORVALUE(Status), &quot;Cancelled&quot;)),(ISPICKVAL( Status, &quot;Cancelled&quot;)), (DATEVALUE(CreatedDate) !=  TODAY()))</errorConditionFormula>
        <errorMessage>The Service Request cannot be cancelled since it was not created today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotCloseServiceRequest_WO_Open_Events</fullName>
        <active>true</active>
        <description>Cannot close a Service Request or set it to Warranty Accepted if a related WO has open events</description>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;CORO_Service&apos;),
( Number_Open_Events_on_WOs__c &gt; 0), OR(ISPICKVAL( Status, &quot;Warranty Accepted&quot;),ISPICKVAL( Status, &quot;Closed&quot;)))</errorConditionFormula>
        <errorMessage>There are open appointments on a related Service Work Order that need to be addressed before closing the Service Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DiscountAmtCannotGreaterRetailSubtotal</fullName>
        <active>true</active>
        <description>Discount Amount cannot be greater than Retails Subtotal</description>
        <errorConditionFormula>Discount_Amount__c  &gt;  Retail_Subtotal__c &amp;&amp;  RecordTypeName__c != &apos;Change_Order&apos;</errorConditionFormula>
        <errorMessage>Discount Amount cannot be greater than Retail Subtotal.  Please make correct adjustments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonSufficientFundsCheck</fullName>
        <active>true</active>
        <description>Throw an error if non-sufficient funds is greater than payments received</description>
        <errorConditionFormula>Non_Sufficient_Funds__c &gt;  Payments_Received__c</errorConditionFormula>
        <errorMessage>The amount of non-sufficient funds cannot exceed the amount of payments received.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Cancellation_Status_Change</fullName>
        <active>true</active>
        <description>Only allows an order in pending cancellation to move to Cancelled status.
AND(PRIORVALUE(Status) == &apos;Pending Cancellation&apos;,   NOT(ISPICKVAL(Status, &apos;Cancelled&apos;))  
)</description>
        <errorConditionFormula>AND(TEXT(PRIORVALUE(Status)) == &apos;Pending Cancellation&apos;, AND(TEXT(Status) != &apos;Pending Cancellation&apos;,
TEXT(Status) != &apos;Cancelled&apos;))</errorConditionFormula>
        <errorMessage>An order that is pending cancellation, cannot be changed to any other status besides &apos;Cancelled&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Manual_Status_Change</fullName>
        <active>true</active>
        <description>This validation rule prevents users from changing the order status manually. It uses the Apex Context field to do this.</description>
        <errorConditionFormula>ISCHANGED(Status) &amp;&amp; (!Apex_Context__c) &amp;&amp; ( RecordTypeName__c  &lt;&gt; &apos;CORO_Service&apos;)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>The order status cannot be changed manually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Refund_Amount_Less_Than_Payment</fullName>
        <active>true</active>
        <description>The amount refunded cannot exceed the original payment amount.</description>
        <errorConditionFormula>IF(ISBLANK(Amount_Refunded__c), 0, Amount_Refunded__c) &gt; 
IF(ISBLANK(Payments_Received__c), 0, Payments_Received__c)</errorConditionFormula>
        <errorMessage>The amount refunded cannot exceed the amount that has been paid.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Save_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISPICKVAL(Service_Type__c, &quot;Save&quot;), ISBLANK(TEXT(Save_Reason__c))), AND(ISPICKVAL(Service_Type__c, &quot;Save&quot;),NOT(ISPICKVAL(Save_Reason__c,&quot;Customer Pick-up In Store&quot;)),ISBLANK(TEXT(Secondary_Save_Reason__c ))))</errorConditionFormula>
        <errorMessage>Must select a Save Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Service_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND((RecordType.DeveloperName = &apos;CORO_Service&apos;),
 (Validate_Service_Order__c = true), OR(ISBLANK( BillToContactId ),ISBLANK(TEXT(Service_Type__c)), ISPICKVAL(Service_Type__c, &quot;--None--&quot;)))</errorConditionFormula>
        <errorMessage>Bill to Contact and Service Type are Required</errorMessage>
    </validationRules>
</CustomObject>